@@ -1,0 +1,59 @@
+[Project]
+FileName=gigedit.dev
+Name=gigedit
+UnitCount=1
+Type=1
+Ver=1
+ObjFiles=
+Includes=C:\libgig-3.1.1\include;C:\GTK\include\sigc++-2.0;C:\GTK\lib\sigc++-2.0\include
+Libs=./;C:\GTK\lib
+PrivateResource=gigedit_private.rc
+ResourceIncludes=
+MakeIncludes=
+Compiler=
+CppCompiler=
+Linker=-lgigedit_@@_-lsigc-2.0_@@_
+IsCpp=1
+Icon=
+ExeOutput=
+ObjectOutput=
+OverrideOutput=0
+OverrideOutputName=gigedit.exe
+HostApplication=
+Folders=
+CommandLine=
+UseCustomMakefile=0
+CustomMakefile=
+IncludeVersionInfo=1
+SupportXPThemes=0
+CompilerSet=0
+CompilerSettings=0000000000000000000000
+
+[VersionInfo]
+Major=@GIGEDIT_VER_MAJOR@
+Minor=@GIGEDIT_VER_MINOR@
+Release=@GIGEDIT_VER_RELEASE@
+Build=0
+LanguageID=1033
+CharsetID=1252
+CompanyName=The LinuxSampler Project
+FileVersion=
+FileDescription=Gigasampler instrument editor
+InternalName=
+LegalCopyright=(c) 2006,2007 Andreas Persson
+LegalTrademarks=
+OriginalFilename=
+ProductName=gigedit
+ProductVersion=
+AutoIncBuildNr=0
+
+[Unit1]
+FileName=..\src\gigedit\main.cpp
+CompileCpp=1
+Folder=gigedit
+Compile=1
+Link=1
+Priority=1000
+OverrideBuildCmd=0
+BuildCmd=
+
